--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
               Obtén la solución, acepta Bitcoin cómo pago y obtén tus ganancias
               instantáneamente, seguro, rápido y fácil de usar.
             </p>
+            <p class="clients__container--left-text-two"> <a class ="privacy_policy" href="politica-datos.html">
+              Lee la politica de privacidad
+            </a>
+              
+            </p>
           </div>  
         </div>
         <div class="clients__container--right">
@@ -310,4 +315,4 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
-</html> 
+</html>
